# sage-wiki-bridge-wxo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  config.example.yaml
deploy/systemd/: README.md  sage-wiki-bridge.env.example  sage-wiki-bridge.service
docs/: ai-source-format.en.md  ai-source-format.md  ai-source-format.zh-CN.md  operations.en.md  operations.md  operations.zh-CN.md  product-design.en.md  product-design.md  product-design.zh-CN.md  technical-design.en.md  technical-design.md  technical-design.zh-CN.md
migrations/: 0001_init.sql
scripts/: bridgectl.sh  start.sh  status.sh  stop.sh
src/: admin.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  status.rs  telemetry.rs
src/archive/: mod.rs
src/enrich/: http_client.rs  jina_reader.rs  mod.rs  tencent_lbs.rs
src/llm/: gemini.rs  mod.rs
src/media/: mod.rs
src/preprocess/: artifact.rs  link.rs  location.rs  media.rs  mod.rs  text.rs
src/receiver/: mod.rs
src/source/: mod.rs
src/store/: mod.rs
src/wechat/: crypto.rs  message.rs  mod.rs  oauth.rs  signature.rs  types.rs
src/worker/: media_processor.rs  mod.rs
tests/fixtures/wechat/: image.xml  link.xml  location.xml  malformed.xml  shortvideo.xml  text.xml  unsupported.xml  video.xml  voice.xml
