[package]
name = "sage-wiki-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
constant_time_eq = "0.3"
dotenvy = "0.15"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
