[package]
name = "sage-wiki-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
aes = "0.8"
axum = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
constant_time_eq = "0.3"
dotenvy = "0.15"
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
